Fix broken tile wrapping

--- a/src/frontend/styles/appshell/default-inline.scss
+++ b/src/frontend/styles/appshell/default-inline.scss
@@ -44,6 +44,7 @@ h1, h2, h3, h4, h5, h6, p {
   margin-top: 0;
   margin-bottom: $base-line-height * 0.5;
   padding: 0;
+  overflow-wrap: normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
